--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -22,6 +22,7 @@
     }
   }
   .areatext{
+    background-color:#fff;
     .areatextTitle{
       padding:10px;
       vertical-align:middle;
@@ -72,6 +73,7 @@
   }
   .foodMarket{
     margin-bottom:15px;
+    background-color:#fff;
     .food{
       padding:10px;
       vertical-align:middle;
