--- a/src/sass/Login.scss
+++ b/src/sass/Login.scss
@@ -3,7 +3,6 @@ html,body{
 }
 #root{
   height:100%;
-  background-color:#fff;
 }
 .my-drawer {
   position: relative;
@@ -97,7 +96,10 @@ html,body{
 }
 .form-login-zc{
   background-color:#fff;
-  height:100%;
+  min-height:800px;
+  position:fixed;
+  left:0;
+  top:0;
   .login-form{
     padding:10px;
     height:100%;
