--- a/src/sass/createUser.scss
+++ b/src/sass/createUser.scss
@@ -1,4 +1,11 @@
 .createUser{
+    background-color:#fff;
+    height: 800px;
+    position: fixed;
+    margin: 0;
+    right: 0;
+    left: 0;
+    top: 0;
   .createUser-top{
     width:100%;
     height:45px;
